tests/rosetta/transpiler/Swift/conditional-structures-5.swift
// Generated by Mochi transpiler v0.10.52 on 2025-08-01 22:07:34 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

func example5(_ b1: Bool, _ b2: Bool) {
    if b1 {
        _ = nil
    } else if b2 {
        _ = nil
    } else {
        _ = nil
    }
    
}
